<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_decorate"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:layout_gravity="center"
            android:text="@string/btnTakePhoto"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/btnCamera"
            android:drawableLeft="@mipmap/ic_camera"
            android:textSize="20sp"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:layout_gravity="center"
            android:text="@string/btnChooseAlbum"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/btnGallery"
            android:textSize="20sp"
            android:drawableLeft="@mipmap/ic_gallery"/>
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:layout_gravity="center"
            android:text="@string/titleSetting"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/btnSetting"
            android:textSize="20sp"
            android:drawableLeft="@mipmap/ic_setting"/>
    </LinearLayout>
</LinearLayout>
